--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <link type="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header>header</header>
+    <main>
+      <cover>cover</cover>
+      <lots>lots</lots>
+      <about>about</about>
+    </main>
+    <footer>footer</footer>
+  </body>
 </html>
