--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link type="stylesheet" href="./fonts/fonts.css" />
-    <link type="stylesheet" href="./styles/global.css" />
-    <link type="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="./fonts/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/global.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header>header</header>
+    <header>
+      <div class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item_no-bullit">главная</li>
+          <li class="header__links-list-item">посмотреть лоты</li>
+          <li class="header__links-list-item">об аукционе</li>
+        </ul>
+      </div>
+      <div class="header__logo"><img class="header__logo-image" src="./images/logo-black.svg" alt=""></div>
+      <div class="address">
+        <div class="header__address">address</div>
+      </div>
+    </header>
     <main>
       <cover>cover</cover>
       <lots>lots</lots>
