--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">главная</li>
@@ -18,7 +18,9 @@
           <li class="header__links-list-item">об аукционе</li>
         </ul>
       </div>
-      <div class="header__logo"><img class="header__logo-image" src="./images/logo-black.svg" alt=""></div>
+      <div class="header__logo">
+        <!-- <img class="header__logo-image" src="./images/logo-black.svg" alt="" /> -->
+      </div>
       <div class="address">
         <div class="header__address">address</div>
       </div>
