--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <header class="header">
       <div class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit">главная</li>
-          <li class="header__links-list-item">посмотреть лоты</li>
-          <li class="header__links-list-item">об аукционе</li>
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link header__link-active" href="#">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">об аукционе</a>
+          </li>
         </ul>
       </div>
       <div class="header__logo">
@@ -27,7 +33,7 @@
     </header>
     <main>
       <cover>cover</cover>
-      <lots>lots</lots>
+      <lots>lots</lots>`
       <about>about</about>
     </main>
     <footer>footer</footer>
