--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </div>
       <div class="header__logo">
-        <!-- <img class="header__logo-image" src="./images/logo-black.svg" alt="" /> -->
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="" />
       </div>
       <div class="address">
         <div class="header__address">address</div>
@@ -33,7 +33,7 @@
     </header>
     <main>
       <cover>cover</cover>
-      <lots>lots</lots>`
+      <lots>lots</lots>
       <about>about</about>
     </main>
     <footer>footer</footer>
