--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         </ul>
       </div>
       <div class="header__logo">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="" />
+        <a href="#">
+          <img
+            class="header__logo-image"
+            src="./images/logo-black.svg"
+            alt="Логотип сайта 'Оно Тебе Надо'"
+          />
+        </a>
       </div>
       <div class="address">
         <div class="header__address">address</div>
