--- a/index.html
+++ b/index.html
@@ -34,21 +34,19 @@
         </a>
       </div>
       <div class="address">
-        <div class="header__address">
-          <address="">
-            <a href="tel:+99995555555">+9 999 555 5555</a>
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-            <div>наб. Принсенграхт 263-265,</div>
-            <div>Амстердам</div>
-          </address=>
-        </div>
+        <address>
+          <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
+          <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
+          <div class="address__address1">наб. Принсенграхт 263-265,</div>
+          <div>Амстердам</div>
+        </address>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <cover>cover</cover>
       <lots>lots</lots>
       <about>about</about>
-    </main>
+    </main> -->
     <footer>footer</footer>
   </body>
 </html>
