--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <address>
           <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
           <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
-          <div class="address__address1">наб. Принсенграхт 263-265,</div>
+          <span>наб. Принсенграхт 263-265,</span>
           <div>Амстердам</div>
         </address>
       </div>
