--- a/index.html
+++ b/index.html
@@ -35,18 +35,41 @@
       </div>
       <div class="address">
         <address>
-          <div><a href="tel:+99995555555">+9 999 555 5555</a></div>
-          <div><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></div>
+          <div>
+            <a href="tel:+99995555555" class="telephone">+9 999 555 5555</a>
+          </div>
+          <div>
+            <a href="mailto:info@sobaka.ge" class="email">info@sobaka.ge</a>
+          </div>
           <span>наб. Принсенграхт 263-265,</span>
           <div>Амстердам</div>
         </address>
       </div>
     </header>
-    <!-- <main>
-      <cover>cover</cover>
-      <lots>lots</lots>
-      <about>about</about>
-    </main> -->
-    <footer>footer</footer>
+    <main>
+      <cover>
+        <div class="cover">
+          <div class="overlay">overlay</div>
+          <div class="aligned-text">
+            <h1 class="cover__title">
+              ОН<span class="letter-spacing-extended">О</span>
+            </h1>
+          </div>
+          <div class="aligned-text_center">
+            <h1 class="cover__title">
+              ТЕБ<span class="letter-spacing-extended">Е</span>
+            </h1>
+          </div>
+          <div class="aligned-text_right">
+            <h1 class="cover__title">
+              <span class="letter-spacing-extended">Н</span>АДО
+            </h1>
+          </div>
+        </div>
+      </cover>
+      <!-- <lots>lots</lots>
+      <about>about</about> -->
+    </main>
+    <!-- <footer>footer</footer> -->
   </body>
 </html>
