--- a/index.html
+++ b/index.html
@@ -49,21 +49,16 @@
     <main>
       <cover>
         <div class="cover">
-          <div class="overlay">overlay</div>
+          <div class="overlay"></div>
           <div class="aligned-text">
-            <h1 class="cover__title">
-              ОН<span class="letter-spacing-extended">О</span>
-            </h1>
+            <h1 class="cover__title">ОН<span class="letter-spacing-extended">О</span></h1>
           </div>
           <div class="aligned-text_center">
-            <h1 class="cover__title">
-              ТЕБ<span class="letter-spacing-extended">Е</span>
+            <h1 class="cover__title">ТЕБ<span class="letter-spacing-extended">Е</span>
             </h1>
           </div>
           <div class="aligned-text_right">
-            <h1 class="cover__title">
-              <span class="letter-spacing-extended">Н</span>АДО
-            </h1>
+            <h1 class="cover__title"><span class="letter-spacing-extended">Н</span>АДО</h1>
           </div>
         </div>
       </cover>
