cover - added description, checkpoint

--- a/index.html
+++ b/index.html
@@ -47,24 +47,51 @@
       </div>
     </header>
     <main>
-      <cover>
-        <div class="cover">
-          <div class="overlay"></div>
-          <div class="aligned-text">
-            <h1 class="cover__title">ОН<span class="letter-spacing-extended">О</span></h1>
-          </div>
-          <div class="aligned-text_center">
-            <h1 class="cover__title">ТЕБ<span class="letter-spacing-extended">Е</span>
-            </h1>
-          </div>
-          <div class="aligned-text_right">
-            <h1 class="cover__title"><span class="letter-spacing-extended">Н</span>АДО</h1>
-          </div>
+      <div class="cover">
+        <div class="overlay"></div>
+        <div class="aligned-text">
+          <h1 class="cover__title">
+            ОН<span class="letter-spacing-extended">О</span>
+          </h1>
         </div>
-      </cover>
+        <div class="aligned-text_center">
+          <h1 class="cover__title">
+            ТЕБ<span class="letter-spacing-extended">Е</span>
+          </h1>
+        </div>
+        <div class="aligned-text_right">
+          <h1 class="cover__title">
+            <span class="letter-spacing-extended">Н</span>АДО
+          </h1>
+        </div>
+        <div class="cover__description">
+          <h2 class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+        <!-- <div class="cover__description">
+          <h2 class="cover__description-text">
+            Аукцио<span class="no-letter-spacing">н</span> вещей<span
+              class="no-letter-spacing"
+              >,</span
+            >
+            <span class="no-letter-spacing">в</span> которы<span
+              class="no-letter-spacing"
+              >е</span
+            >
+            никт<span class="no-letter-spacing" style="letter-spacing: 0.9em"
+              >о</span
+            >
+            н<span class="no-letter-spacing">е</span> верил
+          </h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div> -->
+      </div>
       <!-- <lots>lots</lots>
       <about>about</about> -->
     </main>
+    <div style="height:1000px;"></div>
     <!-- <footer>footer</footer> -->
   </body>
 </html>
