--- a/index.html
+++ b/index.html
@@ -47,51 +47,92 @@
       </div>
     </header>
     <main>
+      <!-- COVER -->
       <div class="cover">
         <div class="overlay"></div>
         <div class="aligned-text">
-          <h1 class="cover__title">
+          <span class="cover__title">
             ОН<span class="letter-spacing-extended">О</span>
-          </h1>
+          </span>
         </div>
         <div class="aligned-text_center">
-          <h1 class="cover__title">
+          <span class="cover__title">
             ТЕБ<span class="letter-spacing-extended">Е</span>
-          </h1>
+          </span>
         </div>
         <div class="aligned-text_right">
-          <h1 class="cover__title">
+          <span class="cover__title">
             <span class="letter-spacing-extended">Н</span>АДО
-          </h1>
+          </span>
         </div>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </h2>
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
-        <!-- <div class="cover__description">
-          <h2 class="cover__description-text">
-            Аукцио<span class="no-letter-spacing">н</span> вещей<span
-              class="no-letter-spacing"
-              >,</span
-            >
-            <span class="no-letter-spacing">в</span> которы<span
-              class="no-letter-spacing"
-              >е</span
-            >
-            никт<span class="no-letter-spacing" style="letter-spacing: 0.9em"
-              >о</span
-            >
-            н<span class="no-letter-spacing">е</span> верил
-          </h2>
-          <button class="bet-button">Сделать ставку</button>
-        </div> -->
       </div>
-      <!-- <lots>lots</lots>
-      <about>about</about> -->
+      <!-- LOTS  -->
+      <div class="lots">
+        <h3 class="lots__heading">ЛОТЫ</h3>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h4 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h4>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h4 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h4>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h4 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h4>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <!--- <a href="#0" class="lots__look-more-link">посмотреть больше</a> -->
+      </div>
+      <!-- ABOUT -->
+      <!-- <about>about</about> -->
     </main>
-    <div style="height:1000px;"></div>
+    <div style="height: 1000px"></div>
+    <!-- FOOTER -->
     <!-- <footer>footer</footer> -->
   </body>
 </html>
