--- a/index.html
+++ b/index.html
@@ -129,10 +129,86 @@
         <!--- <a href="#0" class="lots__look-more-link">посмотреть больше</a> -->
       </div>
       <!-- ABOUT -->
-      <!-- <about>about</about> -->
+      <div class="about">
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="/images/logo-white.svg"
+            alt="Логотип"
+          />
+        </div>
+        <h5 class="about__title">Об аукционе</h5>
+        <div class="about__column-text">
+          <p class="about__text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </div>
     </main>
-    <div style="height: 1000px"></div>
     <!-- FOOTER -->
-    <!-- <footer>footer</footer> -->
+    <footer class="footer">
+      <div class="address">
+        <address>
+          <div>
+            <a href="tel:+99995555555" class="telephone">+9 999 555 5555</a>
+          </div>
+          <div>
+            <a href="mailto:info@sobaka.ge" class="email">info@sobaka.ge</a>
+          </div>
+          <span>наб. Принсенграхт 263-265,</span>
+          <div>Амстердам</div>
+        </address>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link_active" href="#0"> главная </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0"> посмотреть лоты </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__social-list">
+        <div class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img
+              src="/images/yt.svg"
+              alt="Youtube"
+              class="footer__social-icon"
+            />
+          </a>
+        </div>
+        <div class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img src="/images/vk.svg" alt="VK" class="footer__social-icon" />
+          </a>
+        </div>
+        <div class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img
+              src="/images/pinterest.svg"
+              alt="Pinterest"
+              class="footer__social-icon"
+            />
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
