--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     <main>
       <!-- COVER -->
       <div class="cover">
-        <div class="overlay"></div>
         <div class="aligned-text">
           <span class="cover__title">
             ОН<span class="letter-spacing-extended">О</span>
@@ -126,7 +125,7 @@
             </a>
           </li>
         </ul>
-        <!--- <a href="#0" class="lots__look-more-link">посмотреть больше</a> -->
+        <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </div>
       <!-- ABOUT -->
       <div class="about">
