Final first draft for real

--- a/index.html
+++ b/index.html
@@ -49,21 +49,24 @@
     <main>
       <!-- COVER -->
       <div class="cover">
-        <div class="aligned-text">
-          <span class="cover__title">
-            ОН<span class="letter-spacing-extended">О</span>
-          </span>
-        </div>
-        <div class="aligned-text_center">
-          <span class="cover__title">
-            ТЕБ<span class="letter-spacing-extended">Е</span>
-          </span>
-        </div>
-        <div class="aligned-text_right">
-          <span class="cover__title">
-            <span class="letter-spacing-extended">Н</span>АДО
-          </span>
-        </div>
+        <div class="overlay"></div>
+        <h1 class="cover__wrapper">
+          <div class="aligned-text">
+            <span class="cover__title">
+              ОН<span class="letter-spacing-extended">О</span>
+            </span>
+          </div>
+          <div class="aligned-text_center">
+            <span class="cover__title">
+              ТЕБ<span class="letter-spacing-extended">Е</span>
+            </span>
+          </div>
+          <div class="aligned-text_right">
+            <span class="cover__title">
+              <span class="letter-spacing-extended">Н</span>АДО
+            </span>
+          </div>
+        </h1>
         <div class="cover__description">
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
