--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__menu">
+      <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
             <a class="header__link header__link-active" href="#">главная</a>
@@ -23,7 +23,7 @@
             <a class="header__link" href="#">об аукционе</a>
           </li>
         </ul>
-      </div>
+      </nav>
       <div class="header__logo">
         <a href="#">
           <img
@@ -33,39 +33,33 @@
           />
         </a>
       </div>
-      <div class="address">
-        <address>
-          <div>
-            <a href="tel:+99995555555" class="telephone">+9 999 555 5555</a>
-          </div>
-          <div>
-            <a href="mailto:info@sobaka.ge" class="email">info@sobaka.ge</a>
-          </div>
-          <span>наб. Принсенграхт 263-265,</span>
-          <div>Амстердам</div>
-        </address>
-      </div>
+      <address class="address">
+        <a href="tel:+99995555555" class="telephone">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="email">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265,</p>
+        <p>Амстердам</p>
+      </address>
     </header>
     <main>
       <!-- COVER -->
-      <div class="cover">
+      <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__wrapper">
-          <div class="aligned-text">
+          <span class="aligned-text">
             <span class="cover__title">
-              ОН<span class="letter-spacing-extended">О</span>
+              Он<span class="letter-spacing-extended">о</span>
             </span>
-          </div>
-          <div class="aligned-text_center">
+          </span>
+          <span class="aligned-text_center">
             <span class="cover__title">
-              ТЕБ<span class="letter-spacing-extended">Е</span>
+              Теб<span class="letter-spacing-extended">е</span>
             </span>
-          </div>
-          <div class="aligned-text_right">
+          </span>
+          <span class="aligned-text_right">
             <span class="cover__title">
-              <span class="letter-spacing-extended">Н</span>АДО
+              <span class="letter-spacing-extended">Н</span>адо
             </span>
-          </div>
+          </span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -73,10 +67,10 @@
           </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
-      </div>
+      </section>
       <!-- LOTS  -->
-      <div class="lots">
-        <h3 class="lots__heading">ЛОТЫ</h3>
+      <section class="lots">
+        <h2 class="lots__heading">ЛОТЫ</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
@@ -129,17 +123,17 @@
           </li>
         </ul>
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
-      </div>
+      </section>
       <!-- ABOUT -->
-      <div class="about">
+      <section class="about">
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="/images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="Логотип"
           />
         </div>
-        <h5 class="about__title">Об аукционе</h5>
+        <h2 class="about__title">Об аукционе</h2>
         <div class="about__column-text">
           <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
@@ -157,22 +151,16 @@
             продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
-      </div>
+      </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="address">
-        <address>
-          <div>
-            <a href="tel:+99995555555" class="telephone">+9 999 555 5555</a>
-          </div>
-          <div>
-            <a href="mailto:info@sobaka.ge" class="email">info@sobaka.ge</a>
-          </div>
-          <span>наб. Принсенграхт 263-265,</span>
-          <div>Амстердам</div>
-        </address>
-      </div>
+      <address class="address">
+        <a href="tel:+99995555555" class="telephone">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" class="email">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265,</p>
+        <p>Амстердам</p>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
@@ -190,7 +178,7 @@
         <div class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
             <img
-              src="/images/yt.svg"
+              src="./images/yt.svg"
               alt="Youtube"
               class="footer__social-icon"
             />
@@ -198,13 +186,13 @@
         </div>
         <div class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
-            <img src="/images/vk.svg" alt="VK" class="footer__social-icon" />
+            <img src="./images/vk.svg" alt="VK" class="footer__social-icon" />
           </a>
         </div>
         <div class="footer__social-list-item">
           <a href="#0" class="footer__social-link">
             <img
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="Pinterest"
               class="footer__social-icon"
             />
