Style fixes mk 2

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__wrapper">
-          <span class="aligned-text">
-            <span class="cover__title">
+          <span class="cover__aligned-item aligned-text">
+            <span class="cover__aligned-item cover__title">
               Он<span class="letter-spacing-extended">о</span>
             </span>
           </span>
-          <span class="aligned-text_center">
-            <span class="cover__title">
+          <span class="cover__aligned-item aligned-text_center">
+            <span class="cover__aligned-item cover__title">
               Теб<span class="letter-spacing-extended">е</span>
             </span>
           </span>
-          <span class="aligned-text_right">
-            <span class="cover__title">
+          <span class="cover__aligned-item aligned-text_right">
+            <span class="cover__aligned-item cover__title">
               <span class="letter-spacing-extended">Н</span>адо
             </span>
           </span>
